--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
         android:background="#e3e3e3"/>
 
     <ImageView
@@ -25,10 +26,11 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageMenu"
-        app:layout_constraintVertical_bias="0.489" />
+        app:layout_constraintVertical_bias="0.489"
+        android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/selectedDesc"
+        android:id="@+id/selectedImageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/defaultDesc"
