--- a/app/src/main/res/layout/activity_imagemenu.xml
+++ b/app/src/main/res/layout/activity_imagemenu.xml
@@ -9,12 +9,14 @@
         android:id="@+id/pictureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:contentDescription="@string/todo"
+        android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/todo" />
+        tools:srcCompat="@tools:sample/avatars" />
 
 </GridLayout>
