--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,33 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/imageMenu"
-        android:layout_width="410dp"
-        android:layout_height="320dp"
+        android:layout_width="415dp"
+        android:layout_height="200dp"
+        android:background="#D1D1D1"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"
-        android:background="#e3e3e3"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/selectedImage"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
+        android:layout_width="320dp"
+        android:layout_height="320dp"
         android:layout_marginBottom="48dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageMenu"
-        app:layout_constraintVertical_bias="0.489"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintVertical_bias="0.489" />
 
     <TextView
         android:id="@+id/selectedImageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/defaultDesc"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
